# open-ssm-agent

./: .gitignore  .typos.toml  Cargo.toml  Makefile  README.md  compose.yml  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  netbox-integration.yml
docs/design/: aead-nonce.md  session-handshake.md
docs/dev/: edge-checklist.md
osa-agent/: Cargo.toml
osa-agent/src/: backstop.rs  control_channel.rs  dispatch.rs  enroll.rs  exec.rs  inventory.rs  jobstore.rs  main.rs  pty.rs  session.rs  shell_stream.rs
osa-cli/: Cargo.toml
osa-cli/src/: main.rs
osa-coordinator/: Cargo.toml
osa-coordinator/migrations/: 0001_audit.sql  0002_join_token.sql  0003_revoked_identity.sql  0004_ca_identity.sql  0005_session_epoch.sql
osa-coordinator/src/: audit_log.rs  auth.rs  broker.rs  ca.rs  db.rs  epoch.rs  jwks.rs  main.rs  netbox.rs  policy.rs  revocation.rs  service.rs  session.rs  token.rs
osa-core/: Cargo.toml
osa-core/src/: allowlist.rs  audit.rs  auth.rs  domain.rs  handshake.rs  lib.rs  ports.rs  seal.rs  stream.rs  topics.rs  wire.rs
osa-proto/: Cargo.toml  build.rs
osa-proto/proto/: osa.proto
osa-proto/src/: lib.rs
