[package]
name = "osa-agent"
description = "open-ssm-agent host agent: outbound-only ControlChannel, capabilities, vault, collectors, local backstop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osa-agent"
path = "src/main.rs"

[dependencies]
osa-core.workspace = true
osa-proto.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "crypto", "ring"] }
rumqttc = "0.25.1"
rustls = "0.23"
pem = "3"
x509-parser = { version = "0.18.1", features = ["verify"] }

[dev-dependencies]
tempfile = "3.27.0"
