[package]
name = "osa-agent"
description = "open-ssm-agent host agent: outbound-only ControlChannel, capabilities, vault, collectors, local backstop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osa-agent"
path = "src/main.rs"

[dependencies]
osa-core.workspace = true
osa-proto.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "crypto", "ring"] }
rumqttc = "0.25.1"
rustls = "0.23"
pem = "3"
x509-parser = { version = "0.18.1", features = ["verify"] }
uuid.workspace = true
# Resolve a run_as user to uid/gid and drop privileges before exec (AD-14); open a
# PTY (`term`), start a new session (`process`), set the master non-blocking
# (`fcntl`, under the `fs` feature) for the interactive-shell StreamCapability
# (Epic 4).
nix = { version = "0.29", default-features = false, features = ["user", "term", "process", "fs"] }
# Raw read/write/ioctl on the PTY master fd (TIOCSCTTY/TIOCSWINSZ, EIO→EOF).
libc = "0.2"
serde.workspace = true
# Host-local allowlist document (AD-20); operator-editable.
toml = "0.8"
# Host fact collection for inventory (AD-15/AD-16); DMI serial is read from sysfs.
sysinfo = { version = "0.33", default-features = false, features = ["system", "network"] }

[dev-dependencies]
tempfile = "3.27.0"
