[package]
name = "osa-cli"
description = "open-ssm-agent operator CLI: the v1 client surface, gRPC to the coordinator (AD-5)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osa"
path = "src/main.rs"

[dependencies]
osa-core.workspace = true
osa-proto.workspace = true
clap.workspace = true
anyhow.workspace = true
tonic.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Adapt the outbound `osa shell` keystroke channel into a client-streaming request.
tokio-stream = "0.1.17"
# Local terminal raw mode (`term`) + the TIOCGWINSZ size query for `osa shell`.
nix = { version = "0.29", default-features = false, features = ["term"] }
libc = "0.2"
