[package]
name = "osa-coordinator"
description = "open-ssm-agent coordinator: gRPC operator API, broker bridge, registry/audit/policy, CertIssuer, NetBox InventorySink."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osa-coordinator"
path = "src/main.rs"

[dependencies]
osa-core.workspace = true
osa-proto.workspace = true
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
rustls-pki-types = "1.14.1"
time = "0.3.51"
async-trait.workspace = true
getrandom = "0.4.3"

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
# `verify` lets tests cryptographically confirm a leaf was signed by the CA root.
x509-parser = { version = "0.18.1", features = ["verify"] }
