[package]
name = "osa-coordinator"
description = "open-ssm-agent coordinator: gRPC operator API, broker bridge, registry/audit/policy, CertIssuer, NetBox InventorySink."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "osa-coordinator"
path = "src/main.rs"

[dependencies]
osa-core.workspace = true
osa-proto.workspace = true
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
rustls-pki-types = "1.14.1"
time = "0.3.51"
async-trait.workspace = true
getrandom = "0.4.3"
# `verify-client-cert` makes the broker REQUIRE and verify client certs (mTLS);
# without it rumqttd silently ignores `capath` and does server-auth TLS only.
rumqttd = { version = "0.20.0", features = ["verify-client-cert"] }
rustls = "0.23"
tempfile = "3.27.0"
x509-parser = { version = "0.18.1", features = ["verify"] }
uuid.workspace = true
serde.workspace = true
# RBAC policy document (AD-19); operator-editable.
toml = "0.8"
# Live JWKS fetch over HTTPS (AD-18, story 2.1b). rustls only — no OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Durable, stateless-over-Postgres store (AD-24, story 2.3b+). rustls; runtime-
# checked queries (no build-time DB) + built-in migrator.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "uuid"] }
# Hash join tokens before storing them in Postgres (never store the secret).
sha2 = "0.10"

[dev-dependencies]
# Mint operator JWTs in the interceptor test (same crate osa-core validates with).
jsonwebtoken = "9.3"
serde.workspace = true
# Ephemeral Postgres for the durable-store integration tests (AD-24).
testcontainers-modules = { version = "0.11", features = ["postgres"] }
