[package]
name = "osa-core"
description = "Domain + ports (traits) for open-ssm-agent. No I/O, no adapter deps (AD-26)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osa-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
