[package]
name = "osa-core"
description = "Domain + ports (traits) for open-ssm-agent. No I/O, no adapter deps (AD-26)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
osa-proto.workspace = true
prost.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
# ECDSA P-256 (the identity-key algorithm) to authenticate the session handshake
# ephemerals against a broker MITM (AD-27, #20).
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "pem", "std"] }
zeroize = { version = "1.9.0", features = ["derive"] }
getrandom = "0.4.3"
# Operator JWT validation (AD-18). RS*/ES* + JWKS parsing; pure, no network here.
jsonwebtoken = "9.3"
serde_json = "1"
